fixes and more changes